--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": null,
+  "name": "babel-plugin-hot-swap-declarative-modules",
   "version": "0.1.0",
-  "description": null,
+  "description": "",
   "main": "lib/index.js",
   "scripts": {
     "test": "mocha --require source-map-support/register --reporter spec 'lib/**/tests/*.js'",
@@ -9,11 +9,28 @@
     "lint": "eslint runtime/*.js src/**",
     "build": "./scripts/build.js"
   },
-  "repository": null,
-  "bugs": null,
-  "homepage": null,
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/markfinger/babel-plugin-hot-swap-declarative-modules.git"
+  },
+  "bugs": {
+    "url": "https://github.com/markfinger/babel-plugin-hot-swap-declarative-modules/issues"
+  },
+  "homepage": "https://github.com/markfinger/babel-plugin-hot-swap-declarative-modules#readme",
   "author": "Mark Finger",
   "license": "MIT",
-  "dependencies": {},
-  "devDependencies": {}
+  "devDependencies": {
+    "babel-cli": "^6.6.5",
+    "babel-eslint": "^5.0.0",
+    "babel-generator": "^6.6.5",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-traverse": "^6.6.5",
+    "babel-types": "^6.6.5",
+    "babylon": "^6.6.5",
+    "chai": "^3.5.0",
+    "eslint": "^2.3.0",
+    "mocha": "^2.4.5",
+    "source-map-support": "^0.4.0",
+    "yargs": "^4.2.0"
+  }
 }
