--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "babel-plugin-hot-swap-declarative-modules",
   "version": "0.1.0",
-  "description": "",
+  "description": "Enables hot swaps for modules with declarative structures",
   "main": "lib/index.js",
   "scripts": {
     "test": "mocha --require source-map-support/register --reporter spec 'lib/**/tests/*.js'",
